pod-security/subrule/podsecurity-subrule-baseline/.kyverno-test/kyverno-test.yaml
---
apiVersion: cli.kyverno.io/v1alpha1
kind: Test
metadata:
  name: podsecurity-subrule-baseline
policies:
  - ../podsecurity-subrule-baseline.yaml
resources:
  - resource.yaml
results:
  - kind: Pod
    policy: podsecurity-subrule-baseline
    resources:
      - badpod01
    result: fail
    rule: baseline
  - kind: Pod
    policy: podsecurity-subrule-baseline
    resources:
      - goodpod01
    result: pass
    rule: baseline
